--- a/index.html
+++ b/index.html
@@ -8,9 +8,51 @@
    <link rel="stylesheet" href="css/styles.css">
    <title>Day 2 Take Home</title>
 </head>
-  <body>
+<body>
+    <div class="container-fluid">
+      <h3>container-fluid</h3>
+      <div class="row">
+        <header class="col-md-12 header">
+          <h3>header</h3>
+        </header>
+      </div>
+      <div class="row">
+        <nav class="col-md-12 nav">
+          <h3>nav</h3>
+        </nav>
+      </div>
+      <div class="row">
+        <main class="col-md-8 main">
+          <h3>main</h3>
+        </main>
+        <aside class="col-md-4 aside">
+          <h3>aside</h3>
+        </aside>
+      </div>
+      <div class="row">
+        <div class="col-md-3 promo">
+          <h3>promo-1</h3>
+        </div>
+        <div class="col-md-3 promo">
+          <h3>promo-2</h3>
+        </div>
+        <div class="col-md-3 promo">
+          <h3>promo-3</h3>
+        </div>
+        <div class="col-md-3 promo">
+          <h3>promo-4</h3>
+        </div>
+      </div>
+      <div class="row">
+        <footer class="col-md-12 footer">
+          <h3>footer</h3>
+        </footer>
+      </div>
 
+
+
+    </div>
   <script src="bootstrap-3.3-7-dist/js/bootstrap.min.js"></script>
   <script src="js/scripts.js"></script>
-  </body>
+</body>
 </html>
